# cuda

./: CMakeLists.txt  kernel.cl  kernel.cu  kernel.cuh  main.cpp  main.h  main_cl.cpp
